changed the background for the signup page and matched it with login page and made the style of login page same as signup page fixing alignments and making the page consitant

--- a/app/static/signup.css
+++ b/app/static/signup.css
@@ -27,7 +27,6 @@ main {
     justify-content: center;
     padding: 0;
     background-color:  #f0f2f5;
-    margin-top: 100px;
     border-radius: 20px;
     
 }
@@ -43,7 +42,7 @@ main {
 .loginPage {
     margin: 0 50px;
     width: 520px;
-    margin-bottom: 0px;
+    margin-bottom: 20px;
     align-items: center;
 }
 
@@ -57,6 +56,7 @@ main {
 
 .loginPage h2{
     margin: 0;
+    margin-top: 20px;
     width: 100%;
     
 }
@@ -98,7 +98,7 @@ input {
     background-color:white;
     color: black;
     font-size: 17px;
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 .button:hover {
